# opendrda

./: .gitignore  AUTHORS  ChangeLog  HACKING  LICENSE  Makefile.am  README  autogen.sh  configure.in
doc/: faq.html
include/: ddm.h  drda.h  drdatypes.h
src/: Makefile.am
src/libdrda/: Makefile.am  convert.c  createpkg.c  ddmread.c  ddmwrite.c  debug.c  drda.c  fdoca.c  handle.c  server_info.c  tester.c  user.c  util.c
src/odbc/: Makefile.am  connectparams.c  connectparams.h  odbc.c  odbc.h  unittest.c
